objects/Integrations_Message__c.object
<CustomObject>
    <fields>
        <fullName>Body__c</fullName>
        <label>Body</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>AnalysP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oblicore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MEC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SMS Gateway</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B2B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NID</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Error_Status__c</fullName>
        <label>Error Status</label>
        <picklist>
            <picklistValues>
                <fullName>Business Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical Error</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>